--- a/src/app/folder/folder.page.html
+++ b/src/app/folder/folder.page.html
@@ -47,7 +47,7 @@
     If you have any questions, just reply to this message!
   </ion-card-content>
   <ion-card-content>
-    <ion-button color="primary">Send</ion-button>
+    <ion-button color="primary" (click)="sendIndividualMsg()">Send</ion-button>
     <ion-button color="secondary">Payed</ion-button>
   </ion-card-content>
   <ion-card-content>
