--- a/src/app/side-bar/side-bar.component.html
+++ b/src/app/side-bar/side-bar.component.html
@@ -1,8 +1,12 @@
 <ion-list id="labels-list">
   <ion-list-header>Labels</ion-list-header>
 
-  <ion-item *ngFor="let label of item$ | async as list">
+  <!-- <ion-item *ngFor="let label of item$ | async as list">
     <ion-icon slot="start" ios="bookmark-outline" md="bookmark-sharp"></ion-icon>
     <ion-label>{{ label.name }}</ion-label>
-  </ion-item>
+  </ion-item> -->
+
+  <!-- <ion-item> -->
+    <ion-button expand="block">Load from XL</ion-button>
+  <!-- </ion-item> -->
 </ion-list>
